<resources>
    <string name="app_name">Spora_trial</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Nombre</string>
    <string name="prompt_phone">Telefono</string>
    <string name="prompt_adress">Dirreccion</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="prompt_age">Edad</string>
    <string name="action_save">Guardar</string>
    <string name="action_add">Añadir</string>
    <string name="welcome">"Welcome !"</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in_short">Login</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>